--- a/client/index.html
+++ b/client/index.html
@@ -16,7 +16,7 @@
 
     <h3>Mobile</h3>
     <script
-      src="https://www.paypal.com/sdk/js?client-id=ARA8_mK0Mhv1tRWQm5RKgHLTTSWk-dBvnot-iNTdxkTJ1TebmXQjxJpljoZ4fSQBJrDNj1DW8lPL4pmD&components=buttons&merchant-id=BT6E78NTFJL64&debug=true"
+      src="https://paypal.com/sdk/js?client-id=AZxSR8Zv4SOvF2dFSzL4mOC09tJySDtBlOmrHVQ9YjXuXlAyNWlhptTUD6seQNFfCYU38hE9_9jvtdCq&merchant-id=XWVWZ4HG4YH9N&currency=USD&debug=true&components=buttons,funding-eligibility,marks"
       data-partner-attribution-id="APPLEPAY"
     ></script>
 
