--- a/client/index.html
+++ b/client/index.html
@@ -6,19 +6,26 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Applepay Example</title>
     <link href="./styles.css" rel="stylesheet" />
-
   </head>
   <body>
-  
-    <div id="applepay-mark"></div>
-
     <div id="applepay-btn"></div>
 
     <script
-      src="https://www.paypal.com/sdk/js?client-id=AZxSR8Zv4SOvF2dFSzL4mOC09tJySDtBlOmrHVQ9YjXuXlAyNWlhptTUD6seQNFfCYU38hE9_9jvtdCq&merchant-id=XWVWZ4HG4YH9N&currency=USD&debug=true&components=buttons,funding-eligibility,marks"
+      src="https://www.paypal.com/sdk/js?client-id=AZxSR8Zv4SOvF2dFSzL4mOC09tJySDtBlOmrHVQ9YjXuXlAyNWlhptTUD6seQNFfCYU38hE9_9jvtdCq&merchant-id=XWVWZ4HG4YH9N&currency=USD&components=buttons"
       data-partner-attribution-id="APPLEPAY"
     ></script>
 
+    <script>
+      /* Development message - remove in prod */
+      if (!window.ApplePaySession) {
+        document.getElementById("applepay-btn").innerText =
+          "You must be on safari";
+      }
+    </script>
+
+    <script src="./index.js"></script>
+
+    <!-- qrcode.min.js - for mobile testing -->
     <script
       src="https://cdn.rawgit.com/davidshimjs/qrcodejs/gh-pages/qrcode.min.js"
       integrity="sha384-3zSEDfvllQohrq0PHL1fOXJuC/jSOO34H46t6UQfobFOmxE5BpjjaIJY5F2/bMnU"
@@ -26,22 +33,19 @@
     ></script>
 
     <script>
-      if (!window.ApplePaySession) {
-        document.getElementById("applepay-btn").innerText =
-          "You must be on safari";
-      }
-    </script>
-    
-    <script>
       function isMobile() {
-        try{ document.createEvent("TouchEvent"); return true; }
-        catch(e){ return false; }
+        try {
+          document.createEvent("TouchEvent");
+          return true;
+        } catch (e) {
+          return false;
+        }
       }
-      
-      if(!isMobile()){
+
+      if (!isMobile()) {
         let el = document.createElement("div");
         el.setAttribute("id", "qrcode");
-        el.style.marginTop = "100px"
+        el.style.marginTop = "100px";
         document.body.appendChild(el);
 
         const qrCode = new QRCode("qrcode", {
@@ -52,12 +56,9 @@
           colorLight: "#ffffff",
           correctLevel: QRCode.CorrectLevel.H,
         });
-
       }
-
     </script>
 
-    <script src="./index.js"></script>
 
   </body>
 </html>
