--- a/client/index.html
+++ b/client/index.html
@@ -8,10 +8,12 @@
     <link href="./styles.css" rel="stylesheet" />
   </head>
   <body>
+
+
     <div id="applepay-btn"></div>
 
     <script
-      src="https://www.paypal.com/sdk/js?client-id=AZxSR8Zv4SOvF2dFSzL4mOC09tJySDtBlOmrHVQ9YjXuXlAyNWlhptTUD6seQNFfCYU38hE9_9jvtdCq&merchant-id=XWVWZ4HG4YH9N&currency=USD&components=buttons"
+      src="https://www.paypal.com/sdk/js?client-id=AZxSR8Zv4SOvF2dFSzL4mOC09tJySDtBlOmrHVQ9YjXuXlAyNWlhptTUD6seQNFfCYU38hE9_9jvtdCq&merchant-id=XWVWZ4HG4YH9N&currency=USD&components=buttons,funding-eligibility"
       data-partner-attribution-id="APPLEPAY"
     ></script>
 
