--- a/client/index.html
+++ b/client/index.html
@@ -4,63 +4,48 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Applepay Example</title>
-    <link href="./styles.css" rel="stylesheet" />
+    <title>Applepay Examples</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+      crossorigin="anonymous"
+    />
   </head>
   <body>
+    <div class="container">
+      <div id="safari-msg"></div>
+      
+      <br/><br/><br/>
+
+      <h4><img src="/Apple_Pay_Mark.svg" width="50" /> Examples</h4>
+<br/><br/>
+
+      <ul class="list-group list-group-flush">
+        <a href="/with-shipping.html" class="list-group-item list-group-item-action">
+          With shipping options and address collection
+        </a>
+
+        <a
+          href="/no-shipping.html"
+          class="list-group-item list-group-item-action"
+        >
+          No shipping options required - just amount
+        </a>
 
 
-    <div id="applepay-btn"></div>
-
-    <script
-      src="https://www.paypal.com/sdk/js?client-id=AZxSR8Zv4SOvF2dFSzL4mOC09tJySDtBlOmrHVQ9YjXuXlAyNWlhptTUD6seQNFfCYU38hE9_9jvtdCq&merchant-id=XWVWZ4HG4YH9N&currency=USD&debug=true&components=buttons,funding-eligibility,marks"
-      data-partner-attribution-id="APPLEPAY"
-    ></script>
+      </ul>
+    </div>
 
     <script>
       /* Development message - remove in prod */
       if (!window.ApplePaySession) {
-        document.getElementById("applepay-btn").innerText =
+        document.getElementById("safari-msg").innerText =
           "You must be on safari";
       }
     </script>
 
     <script src="./index.js"></script>
-
-    <!-- qrcode.min.js - for mobile testing -->
-    <script
-      src="https://cdn.rawgit.com/davidshimjs/qrcodejs/gh-pages/qrcode.min.js"
-      integrity="sha384-3zSEDfvllQohrq0PHL1fOXJuC/jSOO34H46t6UQfobFOmxE5BpjjaIJY5F2/bMnU"
-      crossorigin="anonymous"
-    ></script>
-
-    <script>
-      function isMobile() {
-        try {
-          document.createEvent("TouchEvent");
-          return true;
-        } catch (e) {
-          return false;
-        }
-      }
-
-      if (!isMobile()) {
-        let el = document.createElement("div");
-        el.setAttribute("id", "qrcode");
-        el.style.marginTop = "100px";
-        document.body.appendChild(el);
-
-        const qrCode = new QRCode("qrcode", {
-          text: window.location.href,
-          width: 200,
-          height: 200,
-          colorDark: "#000000",
-          colorLight: "#ffffff",
-          correctLevel: QRCode.CorrectLevel.H,
-        });
-      }
-    </script>
-
 
   </body>
 </html>
