--- a/examples/index.html
+++ b/examples/index.html
@@ -30,7 +30,7 @@
           href="/no-shipping.html"
           class="list-group-item list-group-item-action"
         >
-          No shipping options required - just amount
+          No shipping options required - amount only
         </a>
 
 
