--- a/examples/index.html
+++ b/examples/index.html
@@ -15,14 +15,18 @@
   <body>
     <div class="container">
       <div id="safari-msg"></div>
-      
-      <br/><br/><br/>
 
-      <h4><img src="/Apple_Pay_Mark.svg" width="50" /> Examples</h4>
-<br/><br/>
+      <br /><br /><br />
 
+      <img src="/Apple_Pay_Mark.svg" width="50" />
+
+      <br /><br />
+      <h5>Examples</h5>
       <ul class="list-group list-group-flush">
-        <a href="/with-shipping.html" class="list-group-item list-group-item-action">
+        <a
+          href="/with-shipping.html"
+          class="list-group-item list-group-item-action"
+        >
           With shipping options and address collection
         </a>
 
@@ -30,10 +34,15 @@
           href="/no-shipping.html"
           class="list-group-item list-group-item-action"
         >
-          No shipping options required - amount only
+          No shipping, amount only
         </a>
 
-
+        <a
+          href="/applepay-paypal.html"
+          class="list-group-item list-group-item-action"
+        >
+          ApplePay & PayPal
+        </a>
       </ul>
     </div>
 
@@ -46,6 +55,5 @@
     </script>
 
     <script src="./index.js"></script>
-
   </body>
 </html>
