--- a/examples/with-shipping.html
+++ b/examples/with-shipping.html
@@ -20,7 +20,7 @@
       /* Development message - remove in prod */
       if (!window.ApplePaySession) {
         document.getElementById("applepay-btn").innerText =
-          "You must be on safari";
+          "You must be on safari to view applepay button";
       }
     </script>
 
