--- a/examples/with-shipping.html
+++ b/examples/with-shipping.html
@@ -46,7 +46,9 @@
       if (!isMobile()) {
         let el = document.createElement("div");
         el.setAttribute("id", "qrcode");
-        el.style.marginTop = "100px";
+        el.style.position = "fixed"
+        el.style.right = "10px"
+        el.style.bottom = "10px"
         document.body.appendChild(el);
 
         const qrCode = new QRCode("qrcode", {
