--- a/examples/index.html
+++ b/examples/index.html
@@ -24,17 +24,17 @@
       <h5>Examples</h5>
       <ul class="list-group list-group-flush">
         <a
-          href="/with-shipping.html"
+          href="/shipping.html"
           class="list-group-item list-group-item-action"
         >
-          With shipping options and address collection
+          Shipping
         </a>
 
         <a
           href="/no-shipping.html"
           class="list-group-item list-group-item-action"
         >
-          No shipping, amount only
+          No shipping
         </a>
 
         <a
