--- a/examples/shipping.html
+++ b/examples/shipping.html
@@ -24,7 +24,7 @@
       }
     </script>
 
-    <script src="./with-shipping.js"></script>
+    <script src="./shipping.js"></script>
 
     <!-- qrcode.min.js - for mobile testing -->
     <script
