--- a/examples/index.html
+++ b/examples/index.html
@@ -18,10 +18,10 @@
 
       <br /><br /><br />
 
-      <img src="/Apple_Pay_Mark.svg" width="50" />
+      <img src="/assets/Apple_Pay_Mark.svg" width="50" />
 
       <br /><br />
-      <h5>Examples</h5>
+      <h5>PayPal SDK Examples</h5>
       <ul class="list-group list-group-flush">
         <a
           href="/shipping.html"
