--- a/examples/localhost.html
+++ b/examples/localhost.html
@@ -11,7 +11,7 @@
     <div id="applepay-btn"></div>
 
     <script
-      src="http://localhost:8000/sdk/js?client-id=AZ4oOpMmgJ3zzqD5quh97IHZnuabU1vwRxfnVKe0CqvZOd6Nfcr-qr_sBKCnRJxODfhSd8IQ2qfL-2aZ&merchant-id=FPK9J4G4WWJMS&currency=USD&debug=true&components=buttons,funding-eligibility,marks"
+      src="https://localhost.paypal.com:8443/sdk/js?client-id=AZ4oOpMmgJ3zzqD5quh97IHZnuabU1vwRxfnVKe0CqvZOd6Nfcr-qr_sBKCnRJxODfhSd8IQ2qfL-2aZ&merchant-id=FPK9J4G4WWJMS&currency=USD&debug=true&components=buttons,funding-eligibility,marks"
       data-partner-attribution-id="APPLEPAY"
     ></script>
 
