--- a/examples/index.html
+++ b/examples/index.html
@@ -26,17 +26,17 @@
       <h5>PayPal SDK Examples</h5>
       <ul class="list-group list-group-flush">
         <a
-          href="/shipping.html"
-          class="list-group-item list-group-item-action"
-        >
-          Shipping
-        </a>
-
-        <a
           href="/no-shipping.html"
           class="list-group-item list-group-item-action"
         >
-          No shipping
+          Basic Amount
+        </a>
+
+        <a
+          href="/shipping.html"
+          class="list-group-item list-group-item-action"
+        >
+          Shipping - Address, Method update
         </a>
 
         <a
