--- a/examples/index.html
+++ b/examples/index.html
@@ -29,7 +29,14 @@
           href="/no-shipping.html"
           class="list-group-item list-group-item-action"
         >
-          Basic Amount
+          Basic amount value
+        </a>
+
+        <a
+          href="/amount-with-tax.html"
+          class="list-group-item list-group-item-action"
+        >
+          Amount value with tax
         </a>
 
         <a
