--- a/examples/index.html
+++ b/examples/index.html
@@ -43,15 +43,23 @@
           href="/shipping.html"
           class="list-group-item list-group-item-action"
         >
-          Shipping - Address, Method update
+          Amount w/ breakdown and shipping - inc shipping address / shipping method change
         </a>
 
         <a
           href="/applepay-paypal.html"
           class="list-group-item list-group-item-action"
         >
-          ApplePay & PayPal
+          ApplePay and PayPal
         </a>
+
+        <a
+          href="/recurring-billing.html"
+          class="list-group-item list-group-item-action"
+        >
+          (wip) ApplePay recurring billing
+        </a>
+        
       </ul>
     </div>
 
