rename to basic

--- a/examples/basic-tax.html
+++ b/examples/basic-tax.html
@@ -19,7 +19,7 @@
       data-partner-attribution-id="APPLEPAY"
     ></script>
     
-    <script src="./amount-with-tax.js"></script>
+    <script src="./basic-tax.js"></script>
 
     <!-- qrcode - for dev mobile testing -->
     <script defer src="./utils/qrcode.js"></script>
