--- a/examples/index.html
+++ b/examples/index.html
@@ -26,17 +26,17 @@
       <h5>PayPal SDK Examples</h5>
       <ul class="list-group list-group-flush">
         <a
-          href="/no-shipping.html"
+          href="/basic.html"
           class="list-group-item list-group-item-action"
         >
-          Basic amount value
+          Basic
         </a>
 
         <a
-          href="/amount-with-tax.html"
+          href="/basic-tax.html"
           class="list-group-item list-group-item-action"
         >
-          Amount value with tax
+          Basic with tax item
         </a>
 
         <a
