--- a/examples/basic.html
+++ b/examples/basic.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     
-    <title>Applepay Example</title>
+    <title>Basic Example</title>
     <link href="./styles.css" rel="stylesheet" />
   </head>
   <body>
@@ -15,11 +15,11 @@
     <div id="applepay-btn"></div>
 
     <script
-      src="https://www.paypal.com/sdk/js?client-id=AZxSR8Zv4SOvF2dFSzL4mOC09tJySDtBlOmrHVQ9YjXuXlAyNWlhptTUD6seQNFfCYU38hE9_9jvtdCq&merchant-id=XWVWZ4HG4YH9N&currency=USD&debug=true&components=buttons,funding-eligibility,marks"
+      src="https://www.paypal.com/sdk/js?client-id=AZxSR8Zv4SOvF2dFSzL4mOC09tJySDtBlOmrHVQ9YjXuXlAyNWlhptTUD6seQNFfCYU38hE9_9jvtdCq&merchant-id=XWVWZ4HG4YH9N&currency=USD&debug=true&components=buttons"
       data-partner-attribution-id="APPLEPAY"
     ></script>
 
-    <script src="./no-shipping.js"></script>
+    <script src="./basic.js"></script>
 
     <!-- qrcode - for dev mobile testing -->
     <script defer src="./utils/qrcode.js"></script>
