--- a/examples/index.html
+++ b/examples/index.html
@@ -43,7 +43,7 @@
           href="/shipping.html"
           class="list-group-item list-group-item-action"
         >
-          Amount w/ breakdown and shipping - inc shipping address / shipping method change
+          Shipping
         </a>
 
         <a
