--- a/examples/index.html
+++ b/examples/index.html
@@ -47,6 +47,13 @@
         </a>
 
         <a
+          href="/shipping-server.html"
+          class="list-group-item list-group-item-action"
+        >
+          Shipping calc on server
+        </a>
+
+        <a
           href="/applepay-paypal.html"
           class="list-group-item list-group-item-action"
         >
