shipping add tax

--- a/examples/index.html
+++ b/examples/index.html
@@ -36,7 +36,7 @@
           href="/basic-tax.html"
           class="list-group-item list-group-item-action"
         >
-          Basic with tax item
+          Sales Tax Update onShippingChange
         </a>
 
         <a
