--- a/examples/index.html
+++ b/examples/index.html
@@ -33,10 +33,10 @@
         </a>
 
         <a
-          href="/basic-tax.html"
+          href="/tax-update-onshippingChange.html"
           class="list-group-item list-group-item-action"
         >
-          Sales Tax Update onShippingChange
+          onShippingChange - Sales Tax Update
         </a>
 
         <a
