--- a/examples/tax-update-onshippingChange.html
+++ b/examples/tax-update-onshippingChange.html
@@ -9,17 +9,22 @@
     <link href="./styles.css" rel="stylesheet" />
   </head>
   <body>
-  
-    <div id="applepay-mark"></div>
+    <div class="container">
+      <p>This example updates the sales and total tax amounts on change of shipping address.</p>
+      <br/>
+      <div id="applepay-btn"></div>
 
-    <div id="applepay-btn"></div>
+
+    </div>
+  
+
 
     <script
       src="https://www.paypal.com/sdk/js?client-id=AZxSR8Zv4SOvF2dFSzL4mOC09tJySDtBlOmrHVQ9YjXuXlAyNWlhptTUD6seQNFfCYU38hE9_9jvtdCq&merchant-id=XWVWZ4HG4YH9N&currency=USD&debug=true&components=buttons"
       data-partner-attribution-id="APPLEPAY"
     ></script>
     
-    <script src="./basic-tax.js"></script>
+    <script src="./tax-update-onshippingChange.js"></script>
 
     <!-- qrcode - for dev mobile testing -->
     <script defer src="./utils/qrcode.js"></script>
