--- a/examples/advanced.html
+++ b/examples/advanced.html
@@ -14,7 +14,6 @@
       <br/>
       <div id="applepay-btn"></div>
 
-
     </div>
   
 
@@ -23,7 +22,7 @@
       data-partner-attribution-id="APPLEPAY"
     ></script>
     
-    <script src="./tax-update-onshippingChange.js"></script>
+    <script src="./advanced.js"></script>
 
     <!-- qrcode - for dev mobile testing -->
     <script defer src="./utils/qrcode.js"></script>
