--- a/examples/index.html
+++ b/examples/index.html
@@ -29,30 +29,15 @@
           href="/basic.html"
           class="list-group-item list-group-item-action"
         >
-          Basic
+          Basic - simple amount
         </a>
 
         <a
-          href="/tax-update-onshippingChange.html"
+          href="/advanced.html"
           class="list-group-item list-group-item-action"
         >
-          onShippingChange - Sales Tax Update
+          Advanced - including shipping
         </a>
-
-        <a
-          href="/shipping.html"
-          class="list-group-item list-group-item-action"
-        >
-          Shipping
-        </a>
-
-        <a
-          href="/applepay-paypal.html"
-          class="list-group-item list-group-item-action"
-        >
-          ApplePay and PayPal
-        </a>
-
         
       </ul>
     </div>
