--- a/examples/advanced.html
+++ b/examples/advanced.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <div class="container">
-      <p>This example updates the sales and total tax amounts on change of shipping address.</p>
+      <h3>Advanced</h3>
       <br/>
       <div id="applepay-btn"></div>
 
