--- a/examples/advanced.html
+++ b/examples/advanced.html
@@ -6,14 +6,27 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     
     <title>Tax Update onShippingChange</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+      crossorigin="anonymous"
+    />
+
     <link href="./styles.css" rel="stylesheet" />
   </head>
   <body>
     <div class="container">
-      <h3>Advanced</h3>
-      <br/>
-      <div id="applepay-btn"></div>
+      <h3>Detailed integration</h3>
+      <ul>
+      <li>Shipping address change</li>
+      <li>Shipping options selection</li>
+      </ul>
 
+      <br/><br/><br/>
+      <div id="applepay-btn"></div>
+      <br/><br/><br/>
+   
     </div>
   
 
