--- a/examples/index.html
+++ b/examples/index.html
@@ -29,14 +29,14 @@
           href="/basic.html"
           class="list-group-item list-group-item-action"
         >
-          Basic - simple amount
+          Basic
         </a>
 
         <a
           href="/advanced.html"
           class="list-group-item list-group-item-action"
         >
-          Advanced - including shipping
+          Detailed integration
         </a>
         
       </ul>
