--- a/examples/advanced.html
+++ b/examples/advanced.html
@@ -17,16 +17,18 @@
   </head>
   <body>
     <div class="container">
-      <h3>Detailed integration</h3>
-      <ul>
-      <li>Shipping address change</li>
-      <li>Shipping options selection</li>
-      </ul>
+      <h3>Advanced</h3>
+
+      <br/>
+
+      <h6>.onShippingChange</h6>
+      <p>On address change handles tax update and available shipping options update</p>
 
       <br/><br/><br/>
       <div id="applepay-btn"></div>
       <br/><br/><br/>
    
+
     </div>
   
 
