--- a/examples/index.html
+++ b/examples/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Applepay Examples</title>
+    <title>ApplePay Examples</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -36,7 +36,7 @@
           href="/advanced.html"
           class="list-group-item list-group-item-action"
         >
-          Detailed integration
+          Advanced
         </a>
         
       </ul>
