--- a/examples/advanced.html
+++ b/examples/advanced.html
@@ -17,7 +17,7 @@
   </head>
   <body>
     <div class="container">
-      <h3>Sandbox - Advanced</h3>
+      <h3>Advanced</h3>
 
       <br/>
 
@@ -33,7 +33,7 @@
   
 
     <script
-      src="https://www.paypal.com/sdk/js?client-id=AZxSR8Zv4SOvF2dFSzL4mOC09tJySDtBlOmrHVQ9YjXuXlAyNWlhptTUD6seQNFfCYU38hE9_9jvtdCq&merchant-id=SJ4YQBQUVKVZU&currency=USD"
+      src="https://www.paypal.com/sdk/js?client-id=AZxSR8Zv4SOvF2dFSzL4mOC09tJySDtBlOmrHVQ9YjXuXlAyNWlhptTUD6seQNFfCYU38hE9_9jvtdCq&merchant-id=XWVWZ4HG4YH9N&currency=USD"
       data-partner-attribution-id="APPLEPAY"
     ></script>
     
