--- a/examples/basic.html
+++ b/examples/basic.html
@@ -17,7 +17,7 @@
     <link href="./styles.css" rel="stylesheet" />
   </head>
   <body>
-    <h3>Basic</h3>
+    <h3>Sandbox - Basic</h3>
     <h6>Basic order amount</h6>
     <br />
 
@@ -26,23 +26,7 @@
     <div id="applepay-btn"></div>
 
     <br />
-    <pre>
-    <code>
-const order = {
-  purchase_units: [
-    {
-      payee: {
-        merchant_id: "XWVWZ4HG4YH9N",
-      },
-      amount: {
-        currency_code: "USD",
-        value: "7.05",
-      },
-    },
-  ],
-};
-    </code>
-    </pre>
+
 
     <script
       src="https://www.paypal.com/sdk/js?client-id=AZxSR8Zv4SOvF2dFSzL4mOC09tJySDtBlOmrHVQ9YjXuXlAyNWlhptTUD6seQNFfCYU38hE9_9jvtdCq&merchant-id=XWVWZ4HG4YH9N&currency=USD"
