--- a/examples/basic.html
+++ b/examples/basic.html
@@ -17,7 +17,7 @@
     <link href="./styles.css" rel="stylesheet" />
   </head>
   <body>
-    <h3>Sandbox - Basic</h3>
+    <h3>Sandbox</h3>
     <h6>Basic order amount</h6>
     <br />
 
