--- a/examples/advanced.html
+++ b/examples/advanced.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     
-    <title>Tax Update onShippingChange</title>
+    <title>Advanced Examplee</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -17,18 +17,16 @@
   </head>
   <body>
     <div class="container">
-      <h3>Sandbox - Advanced</h3>
+      <h3>Sandbox</h3>
 
       <br/>
 
-      <h6>.onShippingChange</h6>
+      <h6>Advanced - .onShippingChange</h6>
       <p>On address change handles tax update and available shipping options update</p>
 
       <br/><br/><br/>
       <div id="applepay-btn"></div>
       <br/><br/><br/>
-   
-
     </div>
   
 
