--- a/examples/basic.html
+++ b/examples/basic.html
@@ -26,7 +26,9 @@
 
     <br />
 
-
+    <script src="https://cdn.lr-in.com/LogRocket.min.js" crossorigin="anonymous"></script>
+    <script>window?.LogRocket?.init('3ouaid/applepay');</script>
+    
     <script
       src="https://www.paypal.com/sdk/js?client-id=AdVrVyh_UduEct9CWFHsaHRXKVxbnCDleEJdVOZdb52qSjrWkKDNd6E1CNvd5BvNrGSsXzgQ238dGgZ4&components=buttons&merchant-id=2V9L63AM2BYKC&debug=true"
       data-partner-attribution-id="APPLEPAY"
