--- a/examples/index.html
+++ b/examples/index.html
@@ -33,10 +33,10 @@
         </a>
 
         <a
-          href="/advanced.html"
+          href="/onshippingchange.html"
           class="list-group-item list-group-item-action"
         >
-          Advanced
+          On Shipping Change
         </a>
         
       </ul>
