--- a/examples/onshippingchange.html
+++ b/examples/onshippingchange.html
@@ -34,7 +34,7 @@
       data-partner-attribution-id="APPLEPAY"
     ></script>
     
-    <script src="./advanced.js"></script>
+    <script src="./onshippingchange.js"></script>
 
     <!-- qrcode - for dev mobile testing -->
     <script defer src="./utils/qrcode.js"></script>
