--- a/examples/index.html
+++ b/examples/index.html
@@ -38,6 +38,13 @@
         >
           On Shipping Change
         </a>
+
+        <a
+          href="/vertical-buttons.html"
+          class="list-group-item list-group-item-action"
+        >
+          Vertical Buttons Integration
+        </a>
         
       </ul>
     </div>
