--- a/examples/onshippingchange.html
+++ b/examples/onshippingchange.html
@@ -5,7 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     
-    <title>Advanced Examplee</title>
+    <link rel="apple-touch-icon" href="/assets/coffee-icon.png">
+
+    <title>Shipping Example</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -20,8 +22,7 @@
 
       <br/>
 
-      <h6>Advanced - .onShippingChange</h6>
-      <p>On address change handles tax update and available shipping options update</p>
+      <h6>Shipping Example</h6>
 
       <br/><br/><br/>
       <div id="applepay-btn"></div>
