--- a/examples/vertical-buttons.html
+++ b/examples/vertical-buttons.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     
-    <title>Advanced Examplee</title>
+        <link rel="apple-touch-icon" href="/assets/coffee-icon.png">
+    <title>Vertical Buttons</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
