--- a/examples/misc/adobe.html
+++ b/examples/misc/adobe.html
@@ -70,7 +70,7 @@
                 },
                 {
                   id: "2",
-                  label: "Fixed",
+                  label: "Fixed Shipping",
                   type: "SHIPPING",
                   selected: false,
                   amount: {
@@ -80,7 +80,7 @@
                 },
                 {
                   id: "3",
-                  label: "Table Rate",
+                  label: "Table Rate Shipping",
                   type: "SHIPPING",
                   selected: false,
                   amount: {
