--- a/examples/basic.html
+++ b/examples/basic.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
 
-    <link rel="apple-touch-icon" href="/assets/shop.png">
+    <link rel="apple-touch-icon" href="/assets/logo.png">
 
     <title>Basic Example</title>
 
