--- a/examples/onshippingchange.html
+++ b/examples/onshippingchange.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     
-    <link rel="apple-touch-icon" href="/assets/coffee-icon.png">
+    <link rel="apple-touch-icon" href="/assets/logo.png">
 
-    <title>Shipping Example</title>
+    <title>onShippingChange Example</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -22,7 +22,8 @@
 
       <br/>
 
-      <h6>Shipping Example</h6>
+      <h6>onShippingChange Example</h6>
+      <p>Handle shipping recalculation events</p>
 
       <br/><br/><br/>
       <div id="applepay-btn"></div>
