--- a/examples/misc/adobe.html
+++ b/examples/misc/adobe.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
 
+    <!-- brand icon for payment sheet -->
     <link rel="apple-touch-icon" href="/assets/logo.png" />
 
     <title>Adobe Example</title>
