--- a/examples/onshippingchange.html
+++ b/examples/onshippingchange.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     
+    <!-- brand icon for payment sheet -->
     <link rel="apple-touch-icon" href="/assets/logo.png">
 
     <title>onShippingChange Example</title>
@@ -38,7 +39,7 @@
     
     <script src="./onshippingchange.js"></script>
 
-    <!-- qrcode - for dev mobile testing -->
+    <!-- @dev -->
     <script defer src="./utils/qrcode.js"></script>
 
   </body>
