--- a/examples/basic.html
+++ b/examples/basic.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
 
+    <!-- brand icon for payment sheet -->
     <link rel="apple-touch-icon" href="/assets/logo.png">
 
     <title>Basic Example</title>
@@ -35,7 +36,7 @@
 
     <script src="./basic.js"></script>
 
-    <!-- qrcode - for dev mobile testing -->
+    <!-- @dev -->
     <script defer src="./utils/qrcode.js"></script>
   </body>
 </html>
