--- a/examples/basic.html
+++ b/examples/basic.html
@@ -6,7 +6,16 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
 
     <!-- brand icon for payment sheet -->
-    <link rel="apple-touch-icon" href="/assets/logo.png">
+    <link rel="apple-touch-icon" href="/assets/logo.png" />
+
+    <!-- 
+    screen options
+    
+    <link rel="apple-touch-icon" href="touch-icon-iphone.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="touch-icon-ipad.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="touch-icon-iphone-retina.png">
+    <link rel="apple-touch-icon" sizes="167x167" href="touch-icon-ipad-retina.png">
+    -->
 
     <title>Basic Example</title>
 
@@ -16,7 +25,6 @@
       integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
       crossorigin="anonymous"
     />
-
   </head>
   <body>
     <h3>Sandbox</h3>
