--- a/examples/index.html
+++ b/examples/index.html
@@ -26,25 +26,34 @@
       <h5>PayPal SDK Examples</h5>
       <ul class="list-group list-group-flush">
         <a
+          href="/buttons-vertical-stack-basic.html"
+          class="list-group-item list-group-item-action"
+        >
+          Paypal Buttons Vertical Stack - Basic Payment
+        </a>
+
+        <a
+          href="/buttons-vertical-stack-onshippingchange.html"
+          class="list-group-item list-group-item-action"
+        >
+          Paypal Buttons Vertical Stack - onShippingChange
+        </a>
+
+        <a
           href="/basic.html"
           class="list-group-item list-group-item-action"
         >
-          Basic
+          Basic ApplePay Payment
         </a>
 
         <a
           href="/onshippingchange.html"
           class="list-group-item list-group-item-action"
         >
-          On Shipping Change
+          ApplePay - onShippingChange
         </a>
 
-        <a
-          href="/vertical-buttons.html"
-          class="list-group-item list-group-item-action"
-        >
-          Vertical Buttons Integration
-        </a>
+
         
       </ul>
     </div>
