--- a/examples/misc/adobe.html
+++ b/examples/misc/adobe.html
@@ -147,6 +147,7 @@
               selected: option.label === data.selected_shipping_option.label,
             }));
 
+            // must return promise
             return fetch(`/orders/${data.orderID}`, {
               method: "PATCH",
               headers: {
