--- a/examples/buttons-vertical-stack-basic.html
+++ b/examples/buttons-vertical-stack-basic.html
@@ -45,7 +45,7 @@
       data-partner-attribution-id="APPLEPAY"
     ></script>
 
-    <script src="./buttons-vertical-stack.js"></script>
+    <script src="./buttons-vertical-stack-basic.js"></script>
 
     <!-- qrcode - for dev mobile testing -->
     <script defer src="./utils/qrcode.js"></script>
