--- a/examples/index.html
+++ b/examples/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -25,6 +24,17 @@
       <br /><br />
       <h5>PayPal SDK Examples</h5>
       <ul class="list-group list-group-flush">
+        <a href="/basic.html" class="list-group-item list-group-item-action">
+          Basic Payment
+        </a>
+
+        <a
+          href="/onshippingchange.html"
+          class="list-group-item list-group-item-action"
+        >
+          onShippingChange callback
+        </a>
+
         <a
           href="/buttons-vertical-stack-basic.html"
           class="list-group-item list-group-item-action"
@@ -38,23 +48,6 @@
         >
           Paypal Buttons Vertical Stack - onShippingChange
         </a>
-
-        <a
-          href="/basic.html"
-          class="list-group-item list-group-item-action"
-        >
-          Basic ApplePay Payment
-        </a>
-
-        <a
-          href="/onshippingchange.html"
-          class="list-group-item list-group-item-action"
-        >
-          ApplePay - onShippingChange
-        </a>
-
-
-        
       </ul>
     </div>
 
@@ -65,6 +58,5 @@
           "You must be on safari";
       }
     </script>
-
   </body>
 </html>
