--- a/examples/basic.html
+++ b/examples/basic.html
@@ -27,16 +27,17 @@
     />
   </head>
   <body>
-    <h3>Sandbox</h3>
-    <h6>Basic order amount</h6>
-    <br />
+    <div class="container">
+      <h3>Sandbox</h3>
+      <h6>Basic order amount</h6>
+      <br />
 
-    <div id="applepay-mark"></div>
+      <div id="applepay-mark"></div>
 
-    <div id="applepay-btn"></div>
+      <div id="applepay-btn"></div>
 
-    <br />
-
+      <br />
+    </div>
     <script
       src="https://www.paypal.com/sdk/js?client-id=AdVrVyh_UduEct9CWFHsaHRXKVxbnCDleEJdVOZdb52qSjrWkKDNd6E1CNvd5BvNrGSsXzgQ238dGgZ4&components=buttons&merchant-id=2V9L63AM2BYKC&debug=true"
       data-partner-attribution-id="APPLEPAY"
