sandbox user note

--- a/examples/buttons-vertical-stack-onshippingchange.html
+++ b/examples/buttons-vertical-stack-onshippingchange.html
@@ -34,6 +34,7 @@
 
       <h6>Vertical Buttons</h6>
       <p>With shipping change</p>
+      <p>Payment will <b>not</b> complete unless logged in as <a href="https://developer.apple.com/apple-pay/sandbox-testing/">Apple sandbox user</a></p>
 
       <br /><br /><br />
       <div id="applepay-btn"></div>
