--- a/examples/onshippingchange.html
+++ b/examples/onshippingchange.html
@@ -16,7 +16,7 @@
     <link rel="apple-touch-icon" sizes="180x180" href="touch-icon-iphone-retina.png">
     <link rel="apple-touch-icon" sizes="167x167" href="touch-icon-ipad-retina.png">
     -->
-    
+
     <title>onShippingChange Example</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
@@ -34,7 +34,8 @@
 
       <h6>onShippingChange Example</h6>
       <p>Handle shipping recalculation events</p>
-
+      <p>Payment will <b>not</b> complete unless logged in as <a href="https://developer.apple.com/apple-pay/sandbox-testing/">Apple sandbox user</a></p>
+      
       <br/><br/><br/>
       <div id="applepay-btn"></div>
       <br/><br/><br/>
