--- a/examples/basic.html
+++ b/examples/basic.html
@@ -30,7 +30,7 @@
     <div class="container">
       <h3>Sandbox</h3>
       <h6>Basic order amount</h6>
-      <p>Payment will <b>not</b> complete unless logged in as <a href="https://developer.apple.com/apple-pay/sandbox-testing/">Apple sandbox user</a></p>
+      <p>Payment will <b>not</b> complete unless logged in as <a href="https://developer.apple.com/apple-pay/sandbox-testing/">sandbox tester account</a></p>
       <br />
 
       <div id="applepay-mark"></div>
