--- a/examples/buttons-vertical-stack-basic.html
+++ b/examples/buttons-vertical-stack-basic.html
@@ -34,8 +34,8 @@
 
       <h6>Vertical Buttons</h6>
       <p>With shipping change</p>
-      <p>Payment will <b>not</b> complete unless logged in as <a href="https://developer.apple.com/apple-pay/sandbox-testing/">Apple sandbox user</a></p>
-      
+      <p>ApplePay Payment will <b>not</b> complete unless logged in as <a href="https://developer.apple.com/apple-pay/sandbox-testing/">sandbox tester account</a></p>
+
       <br /><br /><br />
       <div id="applepay-btn"></div>
       <br /><br /><br />
