--- a/examples/onshippingchange.html
+++ b/examples/onshippingchange.html
@@ -34,8 +34,8 @@
 
       <h6>onShippingChange Example</h6>
       <p>Handle shipping recalculation events</p>
-      <p>Payment will <b>not</b> complete unless logged in as <a href="https://developer.apple.com/apple-pay/sandbox-testing/">Apple sandbox user</a></p>
-      
+      <p>Payment will <b>not</b> complete unless logged in as <a href="https://developer.apple.com/apple-pay/sandbox-testing/">sandbox tester account</a></p>
+
       <br/><br/><br/>
       <div id="applepay-btn"></div>
       <br/><br/><br/>
