--- a/examples/buttons-vertical.html
+++ b/examples/buttons-vertical.html
@@ -33,7 +33,6 @@
       <br />
 
       <h6>Vertical Buttons</h6>
-      <p>With shipping change</p>
       <p>ApplePay Payment will <b>not</b> complete unless logged in as <a href="https://developer.apple.com/apple-pay/sandbox-testing/">sandbox tester account</a></p>
 
       <br /><br /><br />
@@ -46,7 +45,7 @@
       data-partner-attribution-id="APPLEPAY"
     ></script>
 
-    <script src="./buttons-vertical-stack-basic.js"></script>
+    <script src="./buttons-vertical.js"></script>
 
     <!-- qrcode - for dev mobile testing -->
     <script defer src="./utils/qrcode.js"></script>
