--- a/examples/index.html
+++ b/examples/index.html
@@ -36,17 +36,10 @@
         </a>
 
         <a
-          href="/buttons-vertical-stack-basic.html"
+          href="/buttons-vertical.html"
           class="list-group-item list-group-item-action"
         >
-          Paypal Buttons Vertical Stack - Basic Payment
-        </a>
-
-        <a
-          href="/buttons-vertical-stack-onshippingchange.html"
-          class="list-group-item list-group-item-action"
-        >
-          Paypal Buttons Vertical Stack - onShippingChange
+          Paypal Buttons Vertical
         </a>
       </ul>
     </div>
