--- a/examples/basic.html
+++ b/examples/basic.html
@@ -28,9 +28,8 @@
   </head>
   <body>
     <div class="container">
-      <h3>Sandbox</h3>
       <h6>Basic order amount</h6>
-      <p>Payment will <b>not</b> complete unless logged in as <a href="https://developer.apple.com/apple-pay/sandbox-testing/">sandbox tester account</a></p>
+      <p>You will <b>not</b> be charged</p>
       <br />
 
       <div id="applepay-mark"></div>
