--- a/examples/onshippingchange.html
+++ b/examples/onshippingchange.html
@@ -28,22 +28,19 @@
   </head>
   <body>
     <div class="container">
-      <h3>Sandbox</h3>
-
       <br/>
 
       <h6>onShippingChange Example</h6>
       <p>Handle shipping recalculation events</p>
-      <p>Payment will <b>not</b> complete unless logged in as <a href="https://developer.apple.com/apple-pay/sandbox-testing/">sandbox tester account</a></p>
-
+      <p>You will <b>not</b> be charged</p>
+      
       <br/><br/><br/>
       <div id="applepay-btn"></div>
       <br/><br/><br/>
     </div>
   
-
     <script
-      src="https://www.paypal.com/sdk/js?client-id=AdVrVyh_UduEct9CWFHsaHRXKVxbnCDleEJdVOZdb52qSjrWkKDNd6E1CNvd5BvNrGSsXzgQ238dGgZ4&components=buttons&merchant-id=2V9L63AM2BYKC&debug=true"
+      src="https://www.paypal.com/sdk/js?client-id=AWq8yXTfbYqyxPV180uWMPvu2jFoRty_Zu506v3qQVc5IfLNAncS8Cek-yRIL80mcRX1T11Bied5lhX_&components=buttons&merchant-id=Y8U85TT6YSA8J&debug=true"
       data-partner-attribution-id="APPLEPAY"
     ></script>
     
