--- a/examples/onshippingchange.html
+++ b/examples/onshippingchange.html
@@ -31,9 +31,9 @@
       <br/>
 
       <h6>onShippingChange Example</h6>
-      <p>Handle shipping recalculation events</p>
+      <p>Handle shipping updates</p>
       <p>You will <b>not</b> be charged</p>
-      
+
       <br/><br/><br/>
       <div id="applepay-btn"></div>
       <br/><br/><br/>
