--- a/examples/index.html
+++ b/examples/index.html
@@ -28,6 +28,10 @@
           Basic Payment
         </a>
 
+        <a href="/no-shipping.html" class="list-group-item list-group-item-action">
+          No Shipping
+        </a>
+
         <a
           href="/onshippingchange.html"
           class="list-group-item list-group-item-action"
