--- a/examples/no-shipping.html
+++ b/examples/no-shipping.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    
+
     <!-- brand icon for payment sheet -->
-    <link rel="apple-touch-icon" href="/assets/logo.png">
+    <link rel="apple-touch-icon" href="/assets/logo.png" />
 
     <!-- 
     screen options
@@ -17,37 +17,35 @@
     <link rel="apple-touch-icon" sizes="167x167" href="touch-icon-ipad-retina.png">
     -->
 
-    <title>onShippingChange Example</title>
+    <title>No Shipping Example</title>
+
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
       crossorigin="anonymous"
     />
-
   </head>
   <body>
     <div class="container">
-      <br/>
+      <h6>No Shipping</h6>
 
-      <h6>onShippingChange Example</h6>
-      <p>Handle shipping updates</p>
+      <br />
 
+      <div id="applepay-mark"></div>
 
-      <br/><br/><br/>
       <div id="applepay-btn"></div>
-      <br/><br/><br/>
+
+      <br />
     </div>
-  
     <script
       src="https://www.paypal.com/sdk/js?client-id=AWq8yXTfbYqyxPV180uWMPvu2jFoRty_Zu506v3qQVc5IfLNAncS8Cek-yRIL80mcRX1T11Bied5lhX_&components=buttons&merchant-id=Y8U85TT6YSA8J&debug=true"
       data-partner-attribution-id="APPLEPAY"
     ></script>
-    
-    <script src="./onshippingchange.js"></script>
+
+    <script src="./no-shipping.js"></script>
 
     <!-- @dev -->
     <script defer src="./utils/qrcode.js"></script>
-
   </body>
 </html>
