--- a/examples/index.html
+++ b/examples/index.html
@@ -36,7 +36,7 @@
           href="/onshippingchange.html"
           class="list-group-item list-group-item-action"
         >
-          onShippingChange callback
+          Shipping - address/options change
         </a>
 
         <a
