--- a/examples/index.html
+++ b/examples/index.html
@@ -39,7 +39,7 @@
         </a>
 
         <a
-          href="/onshippingchange.html"
+          href="/shipping.html"
           class="list-group-item list-group-item-action"
         >
           Shipping - address/options change
