--- a/examples/shipping.html
+++ b/examples/shipping.html
@@ -17,7 +17,7 @@
     <link rel="apple-touch-icon" sizes="167x167" href="touch-icon-ipad-retina.png">
     -->
 
-    <title>onShippingChange Example</title>
+    <title>Shipping Example</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -30,8 +30,7 @@
     <div class="container">
       <br/>
 
-      <h6>onShippingChange Example</h6>
-      <p>Handle shipping updates</p>
+      <h6>Shipping Example</h6>
 
 
       <br/><br/><br/>
@@ -44,7 +43,7 @@
       data-partner-attribution-id="APPLEPAY"
     ></script>
     
-    <script src="./onshippingchange.js"></script>
+    <script src="./shipping.js"></script>
 
     <!-- @dev -->
     <script defer src="./utils/qrcode.js"></script>
