--- a/examples/index.html
+++ b/examples/index.html
@@ -42,7 +42,7 @@
           href="/shipping.html"
           class="list-group-item list-group-item-action"
         >
-          Shipping - address/options change
+          Shipping
         </a>
 
         <a
